--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
   <!-- <button onclick="addBook()">Add books</button>
   <button onclick="addComic()">Add comics</button>
   <button onclick="products()">Show products</button> -->
-
-  <div id="sidebar" class="sidebar">
-    <ul  id="menu" class="menu">
-   
-    </ul>
+  <div class="container">
+    <div id="sidebar" class="sidebar">
+    </div>
+    <div class="main-content" id="main-content">
+    </div>
   </div>
  
-
 </body>
-<script src="main2.js"></script>
+<script type="module" defer src="/main2.js"></script>
 
 </html>
